# test-casadi-workflow

.github/workflows/: blank.yml  control_system.yml
control_system/: test_env.py
control_system/test_casadi_env_tool/: CMakeLists.txt  README.md  test_gen_nlp_sol.py  test_load_nlp_sol1.cpp  test_load_nlp_sol2.cpp
